RESOLVED FIXED275496
[Navigation] Abort ongoing navigation correctly when in detached state
https://bugs.webkit.org/show_bug.cgi?id=275496
Summary [Navigation] Abort ongoing navigation correctly when in detached state
Rob Buis
Reported 2024-06-14 10:30:59 PDT
Abort ongoing navigation correctly when in detached state.
Attachments
Rob Buis
Comment 1 2024-06-14 10:36:47 PDT
EWS
Comment 2 2024-06-19 01:03:21 PDT
Committed 280167@main (344c9a838c78): <https://commits.webkit.org/280167@main> Reviewed commits have been landed. Closing PR #29828 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-06-19 01:04:21 PDT
Note You need to log in before you can comment on or make changes to this bug.