[Navigation] Abort ongoing navigation correctly when in detached state https://bugs.webkit.org/show_bug.cgi?id=275496

Reviewed by Alex Christensen.

When dispaching the navigate event the frame may be detached and there is no script execution context left.
In that case, fall back to the script execution context the JS promise is created in.

* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-methods/return-value/traverseTo-detach-same-document-expected.txt:
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::abortOngoingNavigation):
(WebCore::Navigation::innerDispatchNavigateEvent):

Canonical link: https://commits.webkit.org/280167@main